Scanning site optimized

--- a/Public/PersonalizationAndShipping.css
+++ b/Public/PersonalizationAndShipping.css
@@ -41,3 +41,13 @@
     color: white;
     font-weight: bold;
 }
+
+#buttonOpenShippings{
+    position: relative;
+    display: inline-block;
+    top: 5%;
+    width: 200px;
+    height: 100px;
+    background-color: greenyellow;
+    color: white;
+    font-weight: bold;
